sintatico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR_UNCLOSED_STRING
    STRING

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMI bloco DOT
Rule 2     bloco -> parte_declaracoes_variaveis comando_composto
Rule 3     parte_declaracoes_variaveis -> VAR declaracao_variaveis_list SEMI
Rule 4     parte_declaracoes_variaveis -> empty
Rule 5     declaracao_variaveis_list -> declaracao_variaveis
Rule 6     declaracao_variaveis_list -> declaracao_variaveis_list SEMI declaracao_variaveis
Rule 7     declaracao_variaveis -> lista_identificadores COLON tipo
Rule 8     lista_identificadores -> ID
Rule 9     lista_identificadores -> lista_identificadores COMMA ID
Rule 10    tipo -> INTEGER
Rule 11    tipo -> REAL
Rule 12    tipo -> BOOLEAN
Rule 13    comando_composto -> BEGIN comando_list END
Rule 14    comando_list -> comando
Rule 15    comando_list -> comando_list SEMI comando
Rule 16    comando -> atribuicao
Rule 17    comando -> comando_composto
Rule 18    comando -> comando_condicional
Rule 19    comando -> comando_repetitivo
Rule 20    atribuicao -> ID ASSIGN expressao
Rule 21    comando_condicional -> IF expressao THEN comando
Rule 22    comando_condicional -> IF expressao THEN comando ELSE comando
Rule 23    comando_repetitivo -> WHILE expressao DO comando
Rule 24    expressao -> expressao_simples
Rule 25    expressao -> expressao_simples relacao expressao_simples
Rule 26    relacao -> EQ
Rule 27    relacao -> NE
Rule 28    relacao -> LT
Rule 29    relacao -> LE
Rule 30    relacao -> GT
Rule 31    relacao -> GE
Rule 32    expressao_simples -> termo
Rule 33    expressao_simples -> expressao_simples PLUS termo
Rule 34    expressao_simples -> expressao_simples MINUS termo
Rule 35    termo -> fator
Rule 36    termo -> termo TIMES fator
Rule 37    termo -> termo DIVIDE fator
Rule 38    fator -> ID
Rule 39    fator -> NUM_INT
Rule 40    fator -> NUM_REAL
Rule 41    fator -> LPAREN expressao RPAREN
Rule 42    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 20
BEGIN                : 13
BOOLEAN              : 12
COLON                : 7
COMMA                : 9
DIVIDE               : 37
DO                   : 23
DOT                  : 1
ELSE                 : 22
END                  : 13
EQ                   : 26
ERROR_UNCLOSED_STRING : 
GE                   : 31
GT                   : 30
ID                   : 1 8 9 20 38
IF                   : 21 22
INTEGER              : 10
LE                   : 29
LPAREN               : 41
LT                   : 28
MINUS                : 34
NE                   : 27
NUM_INT              : 39
NUM_REAL             : 40
PLUS                 : 33
PROGRAM              : 1
REAL                 : 11
RPAREN               : 41
SEMI                 : 1 3 6 15
STRING               : 
THEN                 : 21 22
TIMES                : 36
VAR                  : 3
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

atribuicao           : 16
bloco                : 1
comando              : 14 15 21 22 22 23
comando_composto     : 2 17
comando_condicional  : 18
comando_list         : 13 15
comando_repetitivo   : 19
declaracao_variaveis : 5 6
declaracao_variaveis_list : 3 6
empty                : 4
expressao            : 20 21 22 23 41
expressao_simples    : 24 25 25 33 34
fator                : 35 36 37
lista_identificadores : 7 9
parte_declaracoes_variaveis : 2
programa             : 0
relacao              : 25
termo                : 32 33 34 36 37
tipo                 : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMI bloco DOT

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMI bloco DOT

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMI bloco DOT

    SEMI            shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMI . bloco DOT
    (2) bloco -> . parte_declaracoes_variaveis comando_composto
    (3) parte_declaracoes_variaveis -> . VAR declaracao_variaveis_list SEMI
    (4) parte_declaracoes_variaveis -> . empty
    (42) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 42 (empty -> .)

    bloco                          shift and go to state 5
    parte_declaracoes_variaveis    shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) programa -> PROGRAM ID SEMI bloco . DOT

    DOT             shift and go to state 9


state 6

    (2) bloco -> parte_declaracoes_variaveis . comando_composto
    (13) comando_composto -> . BEGIN comando_list END

    BEGIN           shift and go to state 11

    comando_composto               shift and go to state 10

state 7

    (3) parte_declaracoes_variaveis -> VAR . declaracao_variaveis_list SEMI
    (5) declaracao_variaveis_list -> . declaracao_variaveis
    (6) declaracao_variaveis_list -> . declaracao_variaveis_list SEMI declaracao_variaveis
    (7) declaracao_variaveis -> . lista_identificadores COLON tipo
    (8) lista_identificadores -> . ID
    (9) lista_identificadores -> . lista_identificadores COMMA ID

    ID              shift and go to state 15

    declaracao_variaveis_list      shift and go to state 12
    declaracao_variaveis           shift and go to state 13
    lista_identificadores          shift and go to state 14

state 8

    (4) parte_declaracoes_variaveis -> empty .

    BEGIN           reduce using rule 4 (parte_declaracoes_variaveis -> empty .)


state 9

    (1) programa -> PROGRAM ID SEMI bloco DOT .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMI bloco DOT .)


state 10

    (2) bloco -> parte_declaracoes_variaveis comando_composto .

    DOT             reduce using rule 2 (bloco -> parte_declaracoes_variaveis comando_composto .)


state 11

    (13) comando_composto -> BEGIN . comando_list END
    (14) comando_list -> . comando
    (15) comando_list -> . comando_list SEMI comando
    (16) comando -> . atribuicao
    (17) comando -> . comando_composto
    (18) comando -> . comando_condicional
    (19) comando -> . comando_repetitivo
    (20) atribuicao -> . ID ASSIGN expressao
    (13) comando_composto -> . BEGIN comando_list END
    (21) comando_condicional -> . IF expressao THEN comando
    (22) comando_condicional -> . IF expressao THEN comando ELSE comando
    (23) comando_repetitivo -> . WHILE expressao DO comando

    ID              shift and go to state 22
    BEGIN           shift and go to state 11
    IF              shift and go to state 23
    WHILE           shift and go to state 24

    comando_list                   shift and go to state 16
    comando                        shift and go to state 17
    atribuicao                     shift and go to state 18
    comando_composto               shift and go to state 19
    comando_condicional            shift and go to state 20
    comando_repetitivo             shift and go to state 21

state 12

    (3) parte_declaracoes_variaveis -> VAR declaracao_variaveis_list . SEMI
    (6) declaracao_variaveis_list -> declaracao_variaveis_list . SEMI declaracao_variaveis

    SEMI            shift and go to state 25


state 13

    (5) declaracao_variaveis_list -> declaracao_variaveis .

    SEMI            reduce using rule 5 (declaracao_variaveis_list -> declaracao_variaveis .)


state 14

    (7) declaracao_variaveis -> lista_identificadores . COLON tipo
    (9) lista_identificadores -> lista_identificadores . COMMA ID

    COLON           shift and go to state 26
    COMMA           shift and go to state 27


state 15

    (8) lista_identificadores -> ID .

    COLON           reduce using rule 8 (lista_identificadores -> ID .)
    COMMA           reduce using rule 8 (lista_identificadores -> ID .)


state 16

    (13) comando_composto -> BEGIN comando_list . END
    (15) comando_list -> comando_list . SEMI comando

    END             shift and go to state 28
    SEMI            shift and go to state 29


state 17

    (14) comando_list -> comando .

    END             reduce using rule 14 (comando_list -> comando .)
    SEMI            reduce using rule 14 (comando_list -> comando .)


state 18

    (16) comando -> atribuicao .

    END             reduce using rule 16 (comando -> atribuicao .)
    SEMI            reduce using rule 16 (comando -> atribuicao .)
    ELSE            reduce using rule 16 (comando -> atribuicao .)


state 19

    (17) comando -> comando_composto .

    END             reduce using rule 17 (comando -> comando_composto .)
    SEMI            reduce using rule 17 (comando -> comando_composto .)
    ELSE            reduce using rule 17 (comando -> comando_composto .)


state 20

    (18) comando -> comando_condicional .

    END             reduce using rule 18 (comando -> comando_condicional .)
    SEMI            reduce using rule 18 (comando -> comando_condicional .)
    ELSE            reduce using rule 18 (comando -> comando_condicional .)


state 21

    (19) comando -> comando_repetitivo .

    END             reduce using rule 19 (comando -> comando_repetitivo .)
    SEMI            reduce using rule 19 (comando -> comando_repetitivo .)
    ELSE            reduce using rule 19 (comando -> comando_repetitivo .)


state 22

    (20) atribuicao -> ID . ASSIGN expressao

    ASSIGN          shift and go to state 30


state 23

    (21) comando_condicional -> IF . expressao THEN comando
    (22) comando_condicional -> IF . expressao THEN comando ELSE comando
    (24) expressao -> . expressao_simples
    (25) expressao -> . expressao_simples relacao expressao_simples
    (32) expressao_simples -> . termo
    (33) expressao_simples -> . expressao_simples PLUS termo
    (34) expressao_simples -> . expressao_simples MINUS termo
    (35) termo -> . fator
    (36) termo -> . termo TIMES fator
    (37) termo -> . termo DIVIDE fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    expressao                      shift and go to state 31
    expressao_simples              shift and go to state 32
    termo                          shift and go to state 33
    fator                          shift and go to state 34

state 24

    (23) comando_repetitivo -> WHILE . expressao DO comando
    (24) expressao -> . expressao_simples
    (25) expressao -> . expressao_simples relacao expressao_simples
    (32) expressao_simples -> . termo
    (33) expressao_simples -> . expressao_simples PLUS termo
    (34) expressao_simples -> . expressao_simples MINUS termo
    (35) termo -> . fator
    (36) termo -> . termo TIMES fator
    (37) termo -> . termo DIVIDE fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    expressao                      shift and go to state 39
    expressao_simples              shift and go to state 32
    termo                          shift and go to state 33
    fator                          shift and go to state 34

state 25

    (3) parte_declaracoes_variaveis -> VAR declaracao_variaveis_list SEMI .
    (6) declaracao_variaveis_list -> declaracao_variaveis_list SEMI . declaracao_variaveis
    (7) declaracao_variaveis -> . lista_identificadores COLON tipo
    (8) lista_identificadores -> . ID
    (9) lista_identificadores -> . lista_identificadores COMMA ID

    BEGIN           reduce using rule 3 (parte_declaracoes_variaveis -> VAR declaracao_variaveis_list SEMI .)
    ID              shift and go to state 15

    declaracao_variaveis           shift and go to state 40
    lista_identificadores          shift and go to state 14

state 26

    (7) declaracao_variaveis -> lista_identificadores COLON . tipo
    (10) tipo -> . INTEGER
    (11) tipo -> . REAL
    (12) tipo -> . BOOLEAN

    INTEGER         shift and go to state 42
    REAL            shift and go to state 43
    BOOLEAN         shift and go to state 44

    tipo                           shift and go to state 41

state 27

    (9) lista_identificadores -> lista_identificadores COMMA . ID

    ID              shift and go to state 45


state 28

    (13) comando_composto -> BEGIN comando_list END .

    DOT             reduce using rule 13 (comando_composto -> BEGIN comando_list END .)
    END             reduce using rule 13 (comando_composto -> BEGIN comando_list END .)
    SEMI            reduce using rule 13 (comando_composto -> BEGIN comando_list END .)
    ELSE            reduce using rule 13 (comando_composto -> BEGIN comando_list END .)


state 29

    (15) comando_list -> comando_list SEMI . comando
    (16) comando -> . atribuicao
    (17) comando -> . comando_composto
    (18) comando -> . comando_condicional
    (19) comando -> . comando_repetitivo
    (20) atribuicao -> . ID ASSIGN expressao
    (13) comando_composto -> . BEGIN comando_list END
    (21) comando_condicional -> . IF expressao THEN comando
    (22) comando_condicional -> . IF expressao THEN comando ELSE comando
    (23) comando_repetitivo -> . WHILE expressao DO comando

    ID              shift and go to state 22
    BEGIN           shift and go to state 11
    IF              shift and go to state 23
    WHILE           shift and go to state 24

    comando                        shift and go to state 46
    atribuicao                     shift and go to state 18
    comando_composto               shift and go to state 19
    comando_condicional            shift and go to state 20
    comando_repetitivo             shift and go to state 21

state 30

    (20) atribuicao -> ID ASSIGN . expressao
    (24) expressao -> . expressao_simples
    (25) expressao -> . expressao_simples relacao expressao_simples
    (32) expressao_simples -> . termo
    (33) expressao_simples -> . expressao_simples PLUS termo
    (34) expressao_simples -> . expressao_simples MINUS termo
    (35) termo -> . fator
    (36) termo -> . termo TIMES fator
    (37) termo -> . termo DIVIDE fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    expressao                      shift and go to state 47
    expressao_simples              shift and go to state 32
    termo                          shift and go to state 33
    fator                          shift and go to state 34

state 31

    (21) comando_condicional -> IF expressao . THEN comando
    (22) comando_condicional -> IF expressao . THEN comando ELSE comando

    THEN            shift and go to state 48


state 32

    (24) expressao -> expressao_simples .
    (25) expressao -> expressao_simples . relacao expressao_simples
    (33) expressao_simples -> expressao_simples . PLUS termo
    (34) expressao_simples -> expressao_simples . MINUS termo
    (26) relacao -> . EQ
    (27) relacao -> . NE
    (28) relacao -> . LT
    (29) relacao -> . LE
    (30) relacao -> . GT
    (31) relacao -> . GE

    THEN            reduce using rule 24 (expressao -> expressao_simples .)
    DO              reduce using rule 24 (expressao -> expressao_simples .)
    END             reduce using rule 24 (expressao -> expressao_simples .)
    SEMI            reduce using rule 24 (expressao -> expressao_simples .)
    ELSE            reduce using rule 24 (expressao -> expressao_simples .)
    RPAREN          reduce using rule 24 (expressao -> expressao_simples .)
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    EQ              shift and go to state 52
    NE              shift and go to state 53
    LT              shift and go to state 54
    LE              shift and go to state 55
    GT              shift and go to state 56
    GE              shift and go to state 57

    relacao                        shift and go to state 49

state 33

    (32) expressao_simples -> termo .
    (36) termo -> termo . TIMES fator
    (37) termo -> termo . DIVIDE fator

    PLUS            reduce using rule 32 (expressao_simples -> termo .)
    MINUS           reduce using rule 32 (expressao_simples -> termo .)
    EQ              reduce using rule 32 (expressao_simples -> termo .)
    NE              reduce using rule 32 (expressao_simples -> termo .)
    LT              reduce using rule 32 (expressao_simples -> termo .)
    LE              reduce using rule 32 (expressao_simples -> termo .)
    GT              reduce using rule 32 (expressao_simples -> termo .)
    GE              reduce using rule 32 (expressao_simples -> termo .)
    THEN            reduce using rule 32 (expressao_simples -> termo .)
    DO              reduce using rule 32 (expressao_simples -> termo .)
    END             reduce using rule 32 (expressao_simples -> termo .)
    SEMI            reduce using rule 32 (expressao_simples -> termo .)
    ELSE            reduce using rule 32 (expressao_simples -> termo .)
    RPAREN          reduce using rule 32 (expressao_simples -> termo .)
    TIMES           shift and go to state 58
    DIVIDE          shift and go to state 59


state 34

    (35) termo -> fator .

    TIMES           reduce using rule 35 (termo -> fator .)
    DIVIDE          reduce using rule 35 (termo -> fator .)
    PLUS            reduce using rule 35 (termo -> fator .)
    MINUS           reduce using rule 35 (termo -> fator .)
    EQ              reduce using rule 35 (termo -> fator .)
    NE              reduce using rule 35 (termo -> fator .)
    LT              reduce using rule 35 (termo -> fator .)
    LE              reduce using rule 35 (termo -> fator .)
    GT              reduce using rule 35 (termo -> fator .)
    GE              reduce using rule 35 (termo -> fator .)
    THEN            reduce using rule 35 (termo -> fator .)
    DO              reduce using rule 35 (termo -> fator .)
    END             reduce using rule 35 (termo -> fator .)
    SEMI            reduce using rule 35 (termo -> fator .)
    ELSE            reduce using rule 35 (termo -> fator .)
    RPAREN          reduce using rule 35 (termo -> fator .)


state 35

    (38) fator -> ID .

    TIMES           reduce using rule 38 (fator -> ID .)
    DIVIDE          reduce using rule 38 (fator -> ID .)
    PLUS            reduce using rule 38 (fator -> ID .)
    MINUS           reduce using rule 38 (fator -> ID .)
    EQ              reduce using rule 38 (fator -> ID .)
    NE              reduce using rule 38 (fator -> ID .)
    LT              reduce using rule 38 (fator -> ID .)
    LE              reduce using rule 38 (fator -> ID .)
    GT              reduce using rule 38 (fator -> ID .)
    GE              reduce using rule 38 (fator -> ID .)
    THEN            reduce using rule 38 (fator -> ID .)
    DO              reduce using rule 38 (fator -> ID .)
    END             reduce using rule 38 (fator -> ID .)
    SEMI            reduce using rule 38 (fator -> ID .)
    ELSE            reduce using rule 38 (fator -> ID .)
    RPAREN          reduce using rule 38 (fator -> ID .)


state 36

    (39) fator -> NUM_INT .

    TIMES           reduce using rule 39 (fator -> NUM_INT .)
    DIVIDE          reduce using rule 39 (fator -> NUM_INT .)
    PLUS            reduce using rule 39 (fator -> NUM_INT .)
    MINUS           reduce using rule 39 (fator -> NUM_INT .)
    EQ              reduce using rule 39 (fator -> NUM_INT .)
    NE              reduce using rule 39 (fator -> NUM_INT .)
    LT              reduce using rule 39 (fator -> NUM_INT .)
    LE              reduce using rule 39 (fator -> NUM_INT .)
    GT              reduce using rule 39 (fator -> NUM_INT .)
    GE              reduce using rule 39 (fator -> NUM_INT .)
    THEN            reduce using rule 39 (fator -> NUM_INT .)
    DO              reduce using rule 39 (fator -> NUM_INT .)
    END             reduce using rule 39 (fator -> NUM_INT .)
    SEMI            reduce using rule 39 (fator -> NUM_INT .)
    ELSE            reduce using rule 39 (fator -> NUM_INT .)
    RPAREN          reduce using rule 39 (fator -> NUM_INT .)


state 37

    (40) fator -> NUM_REAL .

    TIMES           reduce using rule 40 (fator -> NUM_REAL .)
    DIVIDE          reduce using rule 40 (fator -> NUM_REAL .)
    PLUS            reduce using rule 40 (fator -> NUM_REAL .)
    MINUS           reduce using rule 40 (fator -> NUM_REAL .)
    EQ              reduce using rule 40 (fator -> NUM_REAL .)
    NE              reduce using rule 40 (fator -> NUM_REAL .)
    LT              reduce using rule 40 (fator -> NUM_REAL .)
    LE              reduce using rule 40 (fator -> NUM_REAL .)
    GT              reduce using rule 40 (fator -> NUM_REAL .)
    GE              reduce using rule 40 (fator -> NUM_REAL .)
    THEN            reduce using rule 40 (fator -> NUM_REAL .)
    DO              reduce using rule 40 (fator -> NUM_REAL .)
    END             reduce using rule 40 (fator -> NUM_REAL .)
    SEMI            reduce using rule 40 (fator -> NUM_REAL .)
    ELSE            reduce using rule 40 (fator -> NUM_REAL .)
    RPAREN          reduce using rule 40 (fator -> NUM_REAL .)


state 38

    (41) fator -> LPAREN . expressao RPAREN
    (24) expressao -> . expressao_simples
    (25) expressao -> . expressao_simples relacao expressao_simples
    (32) expressao_simples -> . termo
    (33) expressao_simples -> . expressao_simples PLUS termo
    (34) expressao_simples -> . expressao_simples MINUS termo
    (35) termo -> . fator
    (36) termo -> . termo TIMES fator
    (37) termo -> . termo DIVIDE fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    expressao                      shift and go to state 60
    expressao_simples              shift and go to state 32
    termo                          shift and go to state 33
    fator                          shift and go to state 34

state 39

    (23) comando_repetitivo -> WHILE expressao . DO comando

    DO              shift and go to state 61


state 40

    (6) declaracao_variaveis_list -> declaracao_variaveis_list SEMI declaracao_variaveis .

    SEMI            reduce using rule 6 (declaracao_variaveis_list -> declaracao_variaveis_list SEMI declaracao_variaveis .)


state 41

    (7) declaracao_variaveis -> lista_identificadores COLON tipo .

    SEMI            reduce using rule 7 (declaracao_variaveis -> lista_identificadores COLON tipo .)


state 42

    (10) tipo -> INTEGER .

    SEMI            reduce using rule 10 (tipo -> INTEGER .)


state 43

    (11) tipo -> REAL .

    SEMI            reduce using rule 11 (tipo -> REAL .)


state 44

    (12) tipo -> BOOLEAN .

    SEMI            reduce using rule 12 (tipo -> BOOLEAN .)


state 45

    (9) lista_identificadores -> lista_identificadores COMMA ID .

    COLON           reduce using rule 9 (lista_identificadores -> lista_identificadores COMMA ID .)
    COMMA           reduce using rule 9 (lista_identificadores -> lista_identificadores COMMA ID .)


state 46

    (15) comando_list -> comando_list SEMI comando .

    END             reduce using rule 15 (comando_list -> comando_list SEMI comando .)
    SEMI            reduce using rule 15 (comando_list -> comando_list SEMI comando .)


state 47

    (20) atribuicao -> ID ASSIGN expressao .

    END             reduce using rule 20 (atribuicao -> ID ASSIGN expressao .)
    SEMI            reduce using rule 20 (atribuicao -> ID ASSIGN expressao .)
    ELSE            reduce using rule 20 (atribuicao -> ID ASSIGN expressao .)


state 48

    (21) comando_condicional -> IF expressao THEN . comando
    (22) comando_condicional -> IF expressao THEN . comando ELSE comando
    (16) comando -> . atribuicao
    (17) comando -> . comando_composto
    (18) comando -> . comando_condicional
    (19) comando -> . comando_repetitivo
    (20) atribuicao -> . ID ASSIGN expressao
    (13) comando_composto -> . BEGIN comando_list END
    (21) comando_condicional -> . IF expressao THEN comando
    (22) comando_condicional -> . IF expressao THEN comando ELSE comando
    (23) comando_repetitivo -> . WHILE expressao DO comando

    ID              shift and go to state 22
    BEGIN           shift and go to state 11
    IF              shift and go to state 23
    WHILE           shift and go to state 24

    comando                        shift and go to state 62
    atribuicao                     shift and go to state 18
    comando_composto               shift and go to state 19
    comando_condicional            shift and go to state 20
    comando_repetitivo             shift and go to state 21

state 49

    (25) expressao -> expressao_simples relacao . expressao_simples
    (32) expressao_simples -> . termo
    (33) expressao_simples -> . expressao_simples PLUS termo
    (34) expressao_simples -> . expressao_simples MINUS termo
    (35) termo -> . fator
    (36) termo -> . termo TIMES fator
    (37) termo -> . termo DIVIDE fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    expressao_simples              shift and go to state 63
    termo                          shift and go to state 33
    fator                          shift and go to state 34

state 50

    (33) expressao_simples -> expressao_simples PLUS . termo
    (35) termo -> . fator
    (36) termo -> . termo TIMES fator
    (37) termo -> . termo DIVIDE fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    termo                          shift and go to state 64
    fator                          shift and go to state 34

state 51

    (34) expressao_simples -> expressao_simples MINUS . termo
    (35) termo -> . fator
    (36) termo -> . termo TIMES fator
    (37) termo -> . termo DIVIDE fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    termo                          shift and go to state 65
    fator                          shift and go to state 34

state 52

    (26) relacao -> EQ .

    ID              reduce using rule 26 (relacao -> EQ .)
    NUM_INT         reduce using rule 26 (relacao -> EQ .)
    NUM_REAL        reduce using rule 26 (relacao -> EQ .)
    LPAREN          reduce using rule 26 (relacao -> EQ .)


state 53

    (27) relacao -> NE .

    ID              reduce using rule 27 (relacao -> NE .)
    NUM_INT         reduce using rule 27 (relacao -> NE .)
    NUM_REAL        reduce using rule 27 (relacao -> NE .)
    LPAREN          reduce using rule 27 (relacao -> NE .)


state 54

    (28) relacao -> LT .

    ID              reduce using rule 28 (relacao -> LT .)
    NUM_INT         reduce using rule 28 (relacao -> LT .)
    NUM_REAL        reduce using rule 28 (relacao -> LT .)
    LPAREN          reduce using rule 28 (relacao -> LT .)


state 55

    (29) relacao -> LE .

    ID              reduce using rule 29 (relacao -> LE .)
    NUM_INT         reduce using rule 29 (relacao -> LE .)
    NUM_REAL        reduce using rule 29 (relacao -> LE .)
    LPAREN          reduce using rule 29 (relacao -> LE .)


state 56

    (30) relacao -> GT .

    ID              reduce using rule 30 (relacao -> GT .)
    NUM_INT         reduce using rule 30 (relacao -> GT .)
    NUM_REAL        reduce using rule 30 (relacao -> GT .)
    LPAREN          reduce using rule 30 (relacao -> GT .)


state 57

    (31) relacao -> GE .

    ID              reduce using rule 31 (relacao -> GE .)
    NUM_INT         reduce using rule 31 (relacao -> GE .)
    NUM_REAL        reduce using rule 31 (relacao -> GE .)
    LPAREN          reduce using rule 31 (relacao -> GE .)


state 58

    (36) termo -> termo TIMES . fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    fator                          shift and go to state 66

state 59

    (37) termo -> termo DIVIDE . fator
    (38) fator -> . ID
    (39) fator -> . NUM_INT
    (40) fator -> . NUM_REAL
    (41) fator -> . LPAREN expressao RPAREN

    ID              shift and go to state 35
    NUM_INT         shift and go to state 36
    NUM_REAL        shift and go to state 37
    LPAREN          shift and go to state 38

    fator                          shift and go to state 67

state 60
